--- a/pkg/.env
+++ b/pkg/.env
@@ -3,3 +3,5 @@ POSTGRES_USER=postgres
 POSTGRES_DB=chatbot
 
 DB="host=localhost user=postgres password=1234 dbname=chatbot port=5432 sslmode=disable"
+
+SENDGRID_API_KEY='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'
