update, bug with redis

--- a/pkg/.env
+++ b/pkg/.env
@@ -2,6 +2,7 @@ POSTGRES_PASSWORD=1234
 POSTGRES_USER=postgres
 POSTGRES_DB=chatbot
 
-DB="host=localhost user=postgres password=1234 dbname=chatbot port=5432 sslmode=disable"
+DB="host=db user=postgres password=1234 dbname=chatbot port=5432 sslmode=disable"
 
 SENDGRID_API_KEY='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'
+REDIS_ADDR=redis:6379  # или "localhost:6379" для локальной разработки
